test/testdata/nil/not_callable_error.lox
nil(); // error: 'nil' object is not callable
